More memory & non-blocking stderr+stdout